--- a/client/Ciphelet/app/src/main/res/values/strings.xml
+++ b/client/Ciphelet/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ciphelet</string>
+    <string name="server">ws://192.168.178.75:8080/ws</string>
 </resources>
