--- a/client/Ciphelet/app/src/main/res/values/strings.xml
+++ b/client/Ciphelet/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="password">Password</string>
     <string name="new_password">New Password</string>
     <string name="welcome">Welcome - %s</string>
+    <string name="contact_name">%s</string>
+    <string name="contact_id">(%s)</string>
 </resources>
